--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ beautifulsoup4==4.9.3
 certifi==2021.5.30
 chardet==4.0.0
 idna==2.10
+mypy==0.902
+mypy-extensions==0.4.3
 numpy==1.20.3
 pandas==1.2.4
 python-dateutil==2.8.1
@@ -9,4 +11,8 @@ pytz==2021.1
 requests==2.25.1
 six==1.16.0
 soupsieve==2.2.1
+toml==0.10.2
+typed-ast==1.4.3
+types-requests==0.1.11
+typing-extensions==3.10.0.0
 urllib3==1.26.5
