--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 beautifulsoup4==4.9.3
 certifi==2021.5.30
 chardet==4.0.0
+cycler==0.10.0
 idna==2.10
+kiwisolver==1.3.1
+matplotlib==3.4.2
 mypy==0.902
 mypy-extensions==0.4.3
 numpy==1.20.3
 pandas==1.2.4
+Pillow==8.2.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
+scipy==1.6.3
+seaborn==0.11.1
 six==1.16.0
 soupsieve==2.2.1
 toml==0.10.2
