--- a/mypy.ini
+++ b/mypy.ini
@@ -6,3 +6,12 @@ ignore_missing_imports = True
 
 [mypy-bs4]
 ignore_missing_imports = True
+
+[mypy-matplotlib]
+ignore_missing_imports = True
+
+[mypy-matplotlib.pyplot]
+ignore_missing_imports = True
+
+[mypy-seaborn]
+ignore_missing_imports = True
